--- a/MyWebApp/WebContent/login.html
+++ b/MyWebApp/WebContent/login.html
@@ -9,7 +9,7 @@
 	Enter username : <input type="text" name="uname" /> <br/>
 	Enter password : <input type="password" name="pwd" /> <br/>
 	Remember me : <input type="checkbox" name="reme" value="yes" /> <br/>
-	<button type="submit">Login Button</button>
+	<button type="submit">Login Karo</button>
 </form>
 </body>
 </html>
